--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,8 @@ body {
 }
 .com-section {
     background: var(--brand-color-com);
-
+    width: 1600px;
+    height: 648px;
 }
 .title-busi {
     text-align: center;
@@ -58,13 +59,27 @@ body {
     color: var(--brand-color-text);
 }
 .titles {
+    margin-top: 30px;
+    margin-bottom: 10px;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.19;    
     letter-spacing: 0.03em;
     color: var(--brand-color-text);
 }
+.design > li {
+    width: 270px;
+height: 368px;
+
+
+background: #FFFFFF;
+
+
+box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+border-radius: 0px 0px 4px 4px;
+}
 .desc {
+    margin: 0;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.19;    
@@ -153,6 +168,7 @@ body {
     color: var(--brand-color-description);
 }
 .com-style {
+    text-align: center;
     width: 1170px;
     height: 368px;
     padding-left: 0;
@@ -220,16 +236,17 @@ body {
     color: var(--brand-color-link);
 }
 .section {
-    margin-top: 0;
     padding-top: 200px;
+    margin-top: 0;
     text-align: center;
     background: var(--brand-color-backgraund);
-    height: 600px;
+    height: 400px;
 }
 .section-title {
     margin-top: 0;
     margin-bottom: 30px;
-    margin-left: 452px;
+    margin-left: auto;
+    margin-right: auto;
     width: 696px;
     height: 120px;
     font-weight: 900;
