--- a/css/styles.css
+++ b/css/styles.css
@@ -11,27 +11,26 @@
     --brand-color-com: #F5F4FA;
     --brand-color-bgd: #F5F5F5;
 }
+
 body {
     width: 1600px;
     font-family: 'Roboto', sans-serif;
     color: var(--brand-color-text);
 
 }
-/* header */
+
+
+
+/* ШАПКА */
+
+
 .header {
     max-width: 1600px;
     background: var(--brand-color-hero);
     border-bottom: 1px solid #ECECEC;
     
 }
-.container {
-    
-    width: 1200px;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
-}
+
 .header-style {
     display: flex;
     justify-content: space-between;
@@ -119,14 +118,33 @@ body {
     color: var(--brand-color-link); 
 }
 
-/* header end */
+/* ШАПКА   end */
+
+
+/* СПІЛЬНЕ*/
 
 .section {
     padding-top: 94px;
     padding-bottom: 94px;
 }
 
-/* hero */
+.container {
+    
+    width: 1200px;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.card-image {
+    display: block;
+} 
+
+/* СПІЛЬНЕ    end */
+
+
+/* ГОЛОВНА */
 .hero-section {
     background: var(--brand-color-backgraund)
 }
@@ -151,9 +169,32 @@ body {
     margin-bottom: 30px;
 }
 
-/* hero end */
+.button-zero {
+    border: none;
+    padding: 0;
+    width: 200px;
+    height: 50px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.9;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: var(--brand-color-hero);
+    background: var(--brand-color-button);
+    cursor: pointer;
+}
 
-/* щсщбливості та зайнятість */
+
+/* ГОЛОВНА  end */
+
+
+
+
+/* ОСОБЛИВОСТІ ТА ЗАЙНЯТІСТЬ */
 
 .description {
     margin-bottom: 94px;
@@ -214,15 +255,27 @@ body {
 }
 
 
-/* щсщбливості та зайнятість  end*/
+/* ОСОБЛИВОСТІ ТА ЗАЙНЯТІСТЬ  end*/
 
 
-/* наша команда */
+
+
+/* НАША КОМАНДА */
 
 .team-section {
     background: var(--brand-color-com);
     max-width: 1600px;
     
+}
+
+.title-team-section {
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: 50px;
+    font-size: 36px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    color: var(--brand-color-text);
 }
 
 .list-cards {
@@ -235,16 +288,6 @@ body {
     justify-content: space-between;
 }
 
-.title-com {
-    text-align: center;
-    margin-top: 0;
-    margin-bottom: 50px;
-    font-size: 36px;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    color: var(--brand-color-text);
-}
-
 .list-cards > li {
     width: 270px;
     background: #FFFFFF;
@@ -252,8 +295,13 @@ body {
     border-radius: 0px 0px 4px 4px;
 }
 
-.titles {
-    margin-top: 30px;
+.data-cards {
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+.titles-cards {
+    margin-top: 0;
     margin-bottom: 10px;
     font-weight: 500;
     font-size: 16px;
@@ -262,242 +310,23 @@ body {
     color: var(--brand-color-text);
 }
 
-.desc {
-    margin: 0;
+.desc-cards {
+    margin-top: 0;
+    margin-bottom: 0;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.19;    
     letter-spacing: 0.03em;
     color: var(--brand-color-description);
-
-}
-
-/* наша команда  end*/
-
-/*
-
-
-
-
-
-.titles-portf {
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
-    color: var(--brand-color-text);
-}*/
-
-
-/*
-.nav {
-    display: flex;
-}
-.link-logo {
-    padding-top: 24px;
-    padding-bottom: 25px;
-    width: 145px;
-    
-    font-family: 'Raleway', sans-serif;
-    font-size: 26px;
-    line-height: 1.2;
-    letter-spacing: 0.03em;
-    color: var(--brand-color-logo);
-    text-decoration: none;
-}
-.link-logo-two {
-    font-family: 'Raleway', sans-serif;
-    color: var(--brand-color-logo-two);
-    text-decoration: none;
-}
-
-.link-style {
-    
-    width: 281px;
-    
-    padding-top: 32px;
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-right: auto;
-    padding-left: 0;
-    margin-left: 93px;
-    list-style: none;
-    display: flex;
-}
-
-.link-style-end {
-    
-    width: 297px;
-    
-    padding-top: 32px;
-    padding-bottom: 32px;
-    padding-left: 0;
-    list-style: none;
-    display: flex;
 }
 
 
+/* НАША КОМАНДА  end*/
 
 
-.list {
+/* ТІДВАЛ */
 
-}
-.list:first-child {
-    width: 45px;
-    margin-right: 50px;
-}    
-.list:nth-child(2) {
-    width: 72px;
-    margin-right: 50px;
-}
-.list:last-child {
-    width: 64px;
-    
-}
-
-
-.link-logo:hover {
-    color: var( --brand-color-text);
-}
-.link-logo:focus {
-    color: var( --brand-color-text);
-}
-.link-logo-two:hover {
-    color: var(--brand-color-logo);
-}
-.link-logo-two:focus {
-    color: var(--brand-color-logo);
-}
-*/
-
-
-
-
-
-/*
-.section-hero {
-    padding-top: 200px;
-    margin-top: 0;
-    text-align: center;
-    background: var(--brand-color-backgraund);
-    height: 400px;
-}
-.section-title {
-    margin-top: 0;
-    margin-bottom: 30px;
-    margin-left: auto;
-    margin-right: auto;
-    width: 696px;
-    height: 120px;
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;    
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-    color: var(--brand-color-hero);
-}
-.desc-section {
-    height: 192px;
-}
-*/
-
-
-/*
-.busi-section {
-    width: 1170px;
-    height: 386px;
-    margin-top: 94px;
-    margin-bottom: 94px;
-    margin-left: 215px;
-}
-
-*/
-.button-zero {
-    
-    border: none;
-    padding: 0;
-    width: 200px;
-    height: 50px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.9;
-    text-align: center;
-    letter-spacing: 0.06em;
-    color: var(--brand-color-hero);
-    background: var(--brand-color-button);
-    cursor: pointer;
-}
-
-.list-button {
-    padding-left: 0;
-    margin: 0 auto;
-    width: 569px;
-    height: 54px;
-    list-style: none;
-    display: flex;
-    justify-content: space-between;
-}
-.button {
-    font-family: 'Roboto';
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.6;
-    height: 38px;
-    padding: 0;
-    letter-spacing: 0.03em;
-    color: var(--brand-color-text);
-    background: var(--brand-color-com);
-    border-radius: 4px;
-    border: none;
-    cursor: pointer;
-}
-.button:hover {
-    background: var(--brand-color-button);
-    color: var(--brand-color-hero);
-}
-.button:focus {
-    background: var(--brand-color-button);
-    color: var(--brand-color-hero);
-}
-.button-one {
-    
-    width: 67px;
-    
-}
-.button-two {
-    
-    width: 125px;
-    
-}
-.button-three {
-    
-    width: 112px;
-    
-}
-.button-four {
-    
-    width: 103px;
-   
-}
-.button-five {
-    
-    width: 130px;
-    
-}
-
-.style-button {
-    width: 1170px;
-    height: 54px;
-    margin-bottom: 34px;
-}
-
-
-/* footer */
-.bgd {
+.footer {
     max-width: 1600px;
     padding-top: 60px;
     padding-bottom: 60px;
@@ -566,56 +395,108 @@ body {
 .link-cont-foot:focus {
     color: var(--brand-color-link); 
 }
-/* footer end */
+
+/* ТІДВАЛ   end */
 
 
 
-.container-portf {
-    margin-top: 94px;
-    width: 1170px;
+
+/*  ПОРТФОЛІО */
+
+.style-button {
     
-    margin-right: auto;
-    margin-left: auto;
 }
-.data-portfolio {
-    width: 1170px;
-    margin-right: auto;
-    margin-left: auto;
+.list-button {
+    padding-left: 0;
+    margin: 0 auto 50px;
+    width: 569px;
+    height: 54px;
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    gap: 8px;
 }
-.list-card {
+
+button {
+    font-family: 'Roboto';
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.6;
+    height: 38px;
     padding: 0;
-    
+    letter-spacing: 0.03em;
+    color: var(--brand-color-text);
+    background: var(--brand-color-com);
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
+}
+
+.button:hover {
+    background: var(--brand-color-button);
+    color: var(--brand-color-hero);
+}
+
+.button:focus {
+    background: var(--brand-color-button);
+    color: var(--brand-color-hero);
+}
+
+.button-one {    
+    width: 67px;    
+}
+.button-two {    
+    width: 125px;    
+}
+.button-three {    
+    width: 112px;    
+}
+.button-four {    
+    width: 103px;  
+}
+.button-five {    
+    width: 130px;    
+}
+
+.list-card {
+    padding: 0;   
     display: flex;
     list-style: none;
     flex-wrap: wrap;
     row-gap: 40px;
     column-gap: 30px;
 }
+
 .list-card > .item {
     flex-basis: calc((100%  - 60px) / 3);
-    background: #FFFFFF;
-    border-bottom: 1px solid #EEEEEE;
-    
+    background: #FFFFFF;    
 }
 
-.card-image {
-    display: block;
-} 
-.titles-portf {
-    width: 322px;
-    
-    margin-top: 20px;
-    margin-bottom: 4px;
-    margin-right: auto;
-    margin-left: auto;
+.data-cards-portf {
+    padding: 20px 24px;
+    border-right: 1px solid #EEEEEE;;
+    border-bottom: 1px solid #EEEEEE;
+    border-left: 1px solid #EEEEEE;;
 }
+
+.titles-portf {
+    margin-top: 0;
+    margin-bottom: 4px;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 36px;
+    letter-spacing: 0.06em;
+    color: var(--brand-color-text);
+}
+
 .desc-portf {
-    margin: 0px auto 20px auto;
-    width: 322px;
-    
+    margin-top: 0;
+    margin-bottom: 0;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.9;
     letter-spacing: 0.03em;
     color: var(--brand-color-description);
 }
+
+/* ПОРТФОЛІО   end */
